@@ -321,10 +321,23 @@ else
   AM_CONDITIONAL(HAVE_PYTHON, false)
 fi
 
+# make CImg wrapper? including C++ source causes link problems on some
+# platforms, so have an option to disable it
+AC_ARG_WITH([cimg], AS_HELP_STRING([--without-cimg], [build without CImg (default: with-cimg)]))
+
+if test x"$with_cimg" != "xno"; then
+  AM_CONDITIONAL(WITH_CIMG, true)
+  AC_DEFINE(WITH_CIMG,1,[include cimg package])
+  CIMG_LIBS=-lstdc++
+else
+  AM_CONDITIONAL(WITH_CIMG, false)
+  AC_MSG_WARN([disabling CImg binding])
+fi
+
 # Gather all up for VIPS_CFLAGS, VIPS_INCLUDES and VIPS_LIBS
 VIPS_CFLAGS="$VIPS_CFLAGS $GTHREAD_CFLAGS $REQUIRED_CFLAGS $PANGOFT2_CFLAGS $FFTW3_CFLAGS $MAGICK_CFLAGS $PNG_CFLAGS $EXIF_CFLAGS $OPENEXR_CFLAGS $LIBOIL_CFLAGS"
 VIPS_INCLUDES="$PNG_INCLUDES $TIFF_INCLUDES $ZIP_INCLUDES $JPEG_INCLUDES $FFTW_INCLUDES $LCMS_INCLUDES" 
-VIPS_LIBS="$MAGICK_LIBS $PNG_LIBS $TIFF_LIBS $ZIP_LIBS $JPEG_LIBS $GTHREAD_LIBS $REQUIRED_LIBS $PANGOFT2_LIBS $FFTW3_LIBS $FFTW_LIBS $LCMS_LIBS $LIBOIL_LIBS $OPENEXR_LIBS $EXIF_LIBS -lm -lstdc++"
+VIPS_LIBS="$MAGICK_LIBS $PNG_LIBS $TIFF_LIBS $ZIP_LIBS $JPEG_LIBS $GTHREAD_LIBS $REQUIRED_LIBS $PANGOFT2_LIBS $FFTW3_LIBS $FFTW_LIBS $LCMS_LIBS $LIBOIL_LIBS $OPENEXR_LIBS $EXIF_LIBS -lm $CIMG_LIBS"
 
 AC_SUBST(VIPS_CFLAGS)
 AC_SUBST(VIPS_INCLUDES)
